--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,27 @@
+* { box-sizing: border-box }
 
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+#sitehead {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 100%;
+  background-color: rgb(0,50,255);
+  opacity: 0.9;
+}
+
+.jumbotron {
+  height: 100%;
+  width: 100%;
+  min-height: 200vh;
+  background-image: url("https://raw.githubusercontent.com/timbocf/portfolio/master/Tim-Rodgers-Web-Developer.jpg");
+  background-size: cover;
+}
