--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,20 @@ body {
 
 #sitehead {
   position: fixed;
-  top: 0;
+  top: 0; 
   left: 0;
   height: 50px;
   width: 100%;
-  background-color: rgb(0,50,255);
-  opacity: 0.9;
+  background-color: rgba(39, 54, 116, 0.8);
 }
 
 .jumbotron {
   height: 100%;
   width: 100%;
-  min-height: 200vh;
+  min-height: 100vh;
   background-image: url("https://raw.githubusercontent.com/timbocf/portfolio/master/Tim-Rodgers-Web-Developer.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: center;
 }
