--- a/css/style.css
+++ b/css/style.css
@@ -6,24 +6,57 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 #sitehead {
-  position: fixed;
-  top: 0; 
-  left: 0;
-  height: 50px;
+  height: 100px;
   width: 100%;
-  background-color: rgba(39, 54, 116, 0.8);
+  background-color: #ffffff;
 }
 
-.jumbotron {
-  height: 100%;
-  width: 100%;
-  min-height: 100vh;
-  background-image: url("https://raw.githubusercontent.com/timbocf/portfolio/master/Tim-Rodgers-Web-Developer.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  background-position-y: center;
+#sitehead a {
+  text-decoration: none;
+  color: #000000;
+}
+
+#logo {
+  font-size: 2em;
+  transition: 0.2s ease-in-out;
+}
+
+#logo:hover, #logo:active {
+  font-size: 2.6em;
+  transform: rotate(90deg);
+}
+
+.navbar {
+  font-size: 1.2em;
+}
+
+.navbar-start {
+
+}
+
+.navbar-end {
+
+}
+
+.navbar-menu {
+
+}
+
+.navbar-item {
+  display: inline-flex;
+  padding: 0.8rem;
+}
+
+a.navbar-item {
+  
+}
+
+.contact-button {
+  border: 5px solid #000000;
+  border-radius: 200px;
+  padding: 5px 15px;
 }
